Refs #79934 added history entry and fixed watermark image from being cropped when pdf printing

--- a/eea/googlecharts/views/css/embed.css
+++ b/eea/googlecharts/views/css/embed.css
@@ -73,6 +73,10 @@ a:visited, a:hover {
     padding-top: 0;
     margin-top: -1.5em;
 }
+
+.isPrint .notesMeld {
+    margin-top: -2em;
+}
 .googlecharts-embed-dialog textarea {
     width: 100%;
 }
