--- a/eea/googlecharts/views/css/print.css
+++ b/eea/googlecharts/views/css/print.css
@@ -29,11 +29,7 @@
     background-image: none !important; /* wkhtmltopdf has issues with the css3 gradient as such we remove it */
 }
 
-.googledashboard-chart.maximized_chart {
-    float: none !important;
-    page-break-inside: avoid;
-    height: inherit !important;
-}
+
 .googlechart_left_image {
     padding-left: 1.5em;
 }
